Stop justifying text
It looks weird on mobile

--- a/static/css/site.css
+++ b/static/css/site.css
@@ -30,7 +30,6 @@ body {
 
 .content {
     line-height: 1.8em;
-    text-align: justify;
 }
 
 a {
